@@ -5,6 +5,13 @@
 **
 ** array = pointer to the data
 ** nrow, ncol = number of rows and colums, from R's point of view.
+**
+**  Sometime in 2015-2018 R allowed for matrices whose total number of
+**  elements is > 2^31, although the numer of columns and rows must be <2^31.
+**  On a 64 bit machine the array variable is of type *double
+**  which is a 64 bit integer; using "array += nrow" rather than
+**  "pointer[i] = array + i*nrow" is critical to avoiding an integer
+**   overflow.
 */
 #include "survS.h"
 #include "survproto.h"
